--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
   <!-- Image credit:https://images.squarespace-cdn.com/content/528809f3e4b0a1b235b315c6/1494136050217-1QS5OGY5K82001U6QC98/We+the+People+Image.jpg?format=1500w&content-type=image%2Fjpeg-->
 
 <div id=staff>
-   <img src="Staff\Kathy Freeman.jpg" class="staff-image" alt="Kathy Freeman" style="width:50%;height:50%">
+   <img src="/Staff/Kathy Freeman.jpg" class="staff-image" alt="Kathy Freeman" style="width:50%;height:50%">
   <h1 align="center"> Kathy Freeman</h1>
   <h3 align="center"> CEO </h3>
    <p float="bottom"> Kathy Freeman is the CEO of the HTTP Foundation. She is a graduate of
@@ -50,7 +50,7 @@
  <!-- Image credit: www.thispersondoesnotexist.com -->
 
 <div id="staff">
-   <img src="Staff\Eric Thompson.jpg" alt="Eric Thompson" class="staff-image" style="width:50%;height:50%">
+   <img src="/Staff/Eric Thompson.jpg" alt="Eric Thompson" class="staff-image" style="width:50%;height:50%">
    <h1 align="center"> Eric Thompson</h1>
    <h3 align="center"> Lead Researcher</h3>
    <p float="bottom"> Eric Thompson is the Lead Researcher for the HTTP Foundation. An adolescent research virtuoso,
@@ -62,7 +62,7 @@
 <!-- Image credit: www.thispersondoesnotexist.com -->
 
 <div id=staff>
-   <img src="Staff\Ben Tran.jpg" alt="Ben Tran" class="staff-image" style="width:50%;height:50%">
+   <img src="/Staff/Ben Tran.jpg" alt="Ben Tran" class="staff-image" style="width:50%;height:50%">
    <h1 align="center"> Ben Tran</h1>
    <h3 align="center"> Lead Web Developer</h3>
    <p float="bottom"> Ben Tran is the head of web development. When he isn't leading the scoreboards in his
@@ -74,7 +74,7 @@
 <!-- Image credit: www.thispersondoesnotexist.com -->
 
 <div id="staff">
-  <img src="Staff\Brandon Kirby.jpg" alt="Brandon Kirby" class="staff-image" style="width:50%;height:50%">
+  <img src="/Staff/Brandon Kirby.jpg" alt="Brandon Kirby" class="staff-image" style="width:50%;height:50%">
    <h1 align="center"> Brandon Kirby</h1>
    <h3 align="center"> The "Money Guy"</h3>
    <p float="bottom"> Brandon Kirby "retired" from his job as a "loan officer" at the recently-federally-investigated
