--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 <!-- Image credit: www.thispersondoesnotexist.com -->
 
 <div id=staff>
-   <img src="Staff/Ben%20Tran.jpg" alt="Ben Tran" class="staff-image" style="width:50%;height:50%">
+   <img src="Staff/Ben Tran.jpg" alt="Ben Tran" class="staff-image" style="width:50%;height:50%">
    <h1 align="center"> Ben Tran</h1>
    <h3 align="center"> Lead Web Developer</h3>
    <p float="bottom"> Ben Tran is the head of web development. When he isn't leading the scoreboards in his
