--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navigation with hamburger menu when mobile -->
   <div class="topnav" id="myTopnav" align="center">
     <a href="index.html">Home</a>
-    <a href="">Reports</a>
+    <a href="reports.html">Reports</a>
     <a href="about.html">Staff</a>
     <a href="">Sources</a>
     <a href="">License</a>
