--- a/about.html
+++ b/about.html
@@ -13,16 +13,12 @@
 
 <body>
   <!-- Logo -->
-  <h1><a href="index.html"><img id="logo" src="HTTP-Logo.png" alt="Holding Truth To Power" title="Holding Truth To Power, LLC"></a></h1>
-
-  <form class="form-search form-inline" action="/" id="body-search" align="center">
-      <input aria-label="Search" class="search-input form-control" placeholder="Search HTTP Database" type="search" name="s" id="header-search" value="">
-  </form>
+  <h1><img id="logo" src="HTTP-Logo.png" alt="Holding Truth To Power" title="Holding Truth To Power, LLC"></h1>
 
   <!-- Navigation with hamburger menu when mobile -->
   <div class="topnav" id="myTopnav" align="center">
     <a href="index.html">Home</a>
-    <a href="">Reports</a>
+    <a href="reports.html">Reports</a>
     <a href="about.html">Staff</a>
     <a href="">Sources</a>
     <a href="">License</a>
@@ -34,10 +30,18 @@
 
   <!-- You can remove this hero if you want -->
   <div class="hero-image">
+	<div class="hero-text">
+		<form class="form-search form-inline" action="/" id="body-search" align="center">
+      		<input aria-label="Search" class="search-input form-control" placeholder="Search HTTP Database" type="search" name="s" id="header-search" value=""><br>
+			<button type="submit">Find The Truth</button>
+  		</form>
+	</div>
   </div>
   <!-- Image credit:https://images.squarespace-cdn.com/content/528809f3e4b0a1b235b315c6/1494136050217-1QS5OGY5K82001U6QC98/We+the+People+Image.jpg?format=1500w&content-type=image%2Fjpeg-->
 
-<div id=staff>
+  <h1 align="center">Meet Our Researchers</h1>
+
+<div id="staff">
    <img src="Staff/Kathy Freeman.jpg" class="staff-image" alt="Kathy Freeman" style="width:50%;height:50%">
   <h1 align="center"> Kathy Freeman</h1>
   <h3 align="center"> CEO </h3>
@@ -46,7 +50,7 @@
      each and every lie spouted by the current administration, she enjoys a nice
      cup of hot matcha on a rainy day with her two Weimeraners, Frick and Frack. </p>
      <br>
-     </div>
+</div>
  <!-- Image credit: www.thispersondoesnotexist.com -->
 
 <div id="staff">
@@ -58,10 +62,10 @@
    class at the local branch of Brigham Young University, and taught himself how to play the
    calliope in his free time.</p>
      <br>
-     </div>
+</div>
 <!-- Image credit: www.thispersondoesnotexist.com -->
 
-<div id=staff>
+<div id="staff">
    <img src="Staff/Ben Tran.jpg" alt="Ben Tran" class="staff-image" style="width:50%;height:50%">
    <h1 align="center"> Ben Tran</h1>
    <h3 align="center"> Lead Web Developer</h3>
@@ -70,7 +74,7 @@
    and efficiently. He also holds the world record for eating the spiciest pepper ever recorded,
    but he doesn't like to talk about it.</p>
      <br>
-     </div>
+</div>
 <!-- Image credit: www.thispersondoesnotexist.com -->
 
 <div id="staff">
@@ -80,9 +84,8 @@
    <p float="bottom"> Brandon Kirby "retired" from his job as a "loan officer" at the recently-federally-investigated
    Fidelity Financial Bank. He now works for the HTTP Foundation cooking the bo... er, as treasurer.
  He tells people he isn't a cat person, but he celebrates Caturday every week in the privacy of his own home.</p>
- </div>
-     <br>
-     <div>
+   <br>
+</div>
    <!-- Image credit: www.thispersondoesnotexist.com -->
 
   <footer>
