--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
   <!-- Logo -->
   <h1><img id="logo" src="HTTP-Logo.png" alt="Holding Truth To Power" title="Holding Truth To Power, LLC"></h1>
 
-  <form class="form-search form-inline" action="/" id="body-search" align="center">
-      <input aria-label="Search" class="search-input form-control" placeholder="Search HTTP Database" type="search" name="s" id="header-search" value="">
-  </form>
-
   <!-- Navigation with hamburger menu when mobile -->
   <div class="topnav" id="myTopnav" align="center">
     <a href="index.html">Home</a>
@@ -34,37 +30,33 @@
 
   <!-- You can remove this hero if you want -->
   <div class="hero-image">
-
+	<div class="hero-text">
+		<form class="form-search form-inline" action="/" id="body-search" align="center">
+      		<input aria-label="Search" class="search-input form-control" placeholder="Search HTTP Database" type="search" name="s" id="header-search" value=""><br>
+			<button type="submit">Find The Truth</button>
+  		</form>
+	</div>
   </div>
-
-  <p class="quote">"It can be difficult to speak truth to power. Circumstances, however, have made doing so increasingly necessary."</p>
-  <h2> ― Aberjhani, Splendid Literarium: A Treasury of Stories, Aphorisms, Poems, and Essays</h2>
-
-  <!-- Image credit:https://images.squarespace-cdn.com/content/528809f3e4b0a1b235b315c6/1494136050217-1QS5OGY5K82001U6QC98/We+the+People+Image.jpg?format=1500w&content-type=image%2Fjpeg-->
-  <section>
-      <img src="studying.jpg" class="img-left">
+  <h1>  Welcome to the Holding Truth To Power Foundation, LLC. </h1>
       <p class="p-block">
-        Welcome to the Holding Truth To Power Foundation, LLC. We hold our researchers to the highest educational and ethical standards
+        We hold our researchers to the highest educational and ethical standards
         of research to ensure a fair, unbiased and concise reporting process in order to produce easy to understand, accurate and fair reports based on nothing
-        but pure facts.
-      </p>
-  </section>
-  <section>
-    <img src="not-for-profit-business.jpg" class="img-right">
-    <p class="p-block">
-      We produce free, easy to read and easy to download PDF documents regarding nearly each and every major story across the news spectrum of these modern times. The HTTP Foundation is provided free of charge and operartes as a 501(c)(3) compliant
-      non-profit organization. To download our 501(c)(3) paperwork, which is publicly available, please visit our Contacts section in the navigation bar above.
-    </p>
-  </section>
-  <p class="p-block">
-    We at the HTTP Foundation believe every American deserves to know the truth.
+        but pure facts. We produce free, easy to read and easy to download PDF documents regarding nearly each and every major story across the news spectrum of these modern times. The HTTP Foundation is provided free of charge and operartes as a 501(c)(3) compliant
+        non-profit organization. To download our 501(c)(3) paperwork, which is publicly available, please visit our Contacts section in the navigation bar above. We at the HTTP Foundation believe every American deserves to know the truth.
     <br>
     <br>
-  The REAL truth.
+    The <b>REAL</b> truth.
     <br>
     <br>
     Our team is committed to finding the most unbiased sources, compiling facts into neat, timely reports, and turning those reports into easily digestable , lightweight PDF files free and available for anyone to download at any time.
   </p>
+  <p class="quote">"It can be difficult to speak truth to power. Circumstances, however, have made doing so increasingly necessary."</p>
+  <h4> ― Aberjhani, Splendid Literarium: A Treasury of Stories, Aphorisms, Poems, and Essays</h4>
+
+  <!-- Image credit:https://images.squarespace-cdn.com/content/528809f3e4b0a1b235b315c6/1494136050217-1QS5OGY5K82001U6QC98/We+the+People+Image.jpg?format=1500w&content-type=image%2Fjpeg-->
+  <br>
+  <br>
+  <img src="maxresdefault.jpg (1280×720).url">
 
 
   <footer>
