--- a/reports.html
+++ b/reports.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -16,10 +15,6 @@
   <!-- Logo -->
   <h1><img id="logo" src="HTTP-Logo.png" alt="Holding Truth To Power" title="Holding Truth To Power, LLC"></h1>
 
-  <form class="form-search form-inline" action="/" id="body-search" align="center">
-      <input aria-label="Search" class="search-input form-control" placeholder="Search HTTP Database" type="search" name="s" id="header-search" value="">
-  </form>
-
   <!-- Navigation with hamburger menu when mobile -->
   <div class="topnav" id="myTopnav" align="center">
     <a href="index.html">Home</a>
@@ -35,5 +30,88 @@
 
   <!-- You can remove this hero if you want -->
   <div class="hero-image">
-
+	<div class="hero-text">
+		<form class="form-search form-inline" action="/" id="body-search" align="center">
+      		<input aria-label="Search" class="search-input form-control" placeholder="Search HTTP Database" type="search" name="s" id="header-search" value=""><br>
+			<button type="submit">Find The Truth</button>
+  		</form>
+	</div>
   </div>
+<br>
+<br>
+  <table id="report-table">
+  <tr>
+    <th>Case Number</th>
+    <th>Case Name</th>
+    <th>Download</th>
+  </tr>
+  <tr>
+    <td>#0001</td>
+    <td>Breonna Taylor</td>
+    <td><button type="button" id="report-button">Download</td>
+  </tr>
+  <tr>
+    <td>#0002</td>
+    <td>David "YaYa" McAtee</td>
+    <td><button id="report-button">Download</td>
+  </tr>
+  <tr>
+    <td>#0003</td>
+    <td>Ahmaud Arbery</td>
+    <td><button id="report-button">Download</td>
+  </tr>
+  <tr>
+    <td>#0004</td>
+    <td>Tamir Rice</td>
+    <td><button id="report-button">Download</td>
+  </tr>
+  <tr>
+    <td>#0005</td>
+    <td>Trayvon Martin</td>
+    <td><button id="report-button">Download</td>
+  </tr>
+  <tr>
+    <td>#0006</td>
+    <td>Donald Trump</td>
+    <td><button id="report-button">Download</td>
+  </tr>
+  <tr>
+    <td>#0007</td>
+    <td>Mike Pompeo</td>
+    <td><button id="report-button">Download</td>
+  </tr>
+  <td>#0008</td>
+  <td>Mel Ignato</td>
+  <td><button type="button" id="report-button">Download</td>
+</tr>
+<tr>
+  <td>#0009</td>
+  <td>Jeffrey Mundt</td>
+  <td><button id="report-button">Download</td>
+</tr>
+<tr>
+  <td>#0010</td>
+  <td>Rita Joan Robbins</td>
+  <td><button id="report-button">Download</td>
+</tr>
+<tr>
+  <td>#0011</td>
+  <td>Anne Gottlieb</td>
+  <td><button id="report-button">Download</td>
+</tr>
+<tr>
+  <td>#0012</td>
+  <td>Wesley Willis</td>
+  <td><button id="report-button">Download</td>
+</tr>
+<tr>
+  <td>#0012</td>
+  <td>Matthew Landan</td>
+  <td><button id="report-button">Download</td>
+</tr>
+<tr>
+  <td>#0013</td>
+  <td>Phillip Rodriguez/BRRR</td>
+  <td><button id="report-button">Download</td>
+</tr>
+</table>
